27 Jul 2017; Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>:
	* Add a package for error investigation (better_exceptions)
	* Update templates (improve initial ux, before style application)

11 Jul 2017; Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>:
	* Update style and layout (optimize css)
	* Add firm logo and temporary product logo
	* Reduce image file size
	* Fix feature description and announcement

26 Jun 2017; Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>:
	* Add background image and transition animation

24 Jun 2017; Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>:
	* Responsize layout (styr)
	* Add chat service integration
	* Setup deployment

23 Jun 2017; Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>:
	* Initial Commit