@@ -1,11 +1,14 @@
 #!/usr/bin/env zsh
 
+root_dir=$(dirname $(dirname $(readlink -f $0)))
+gcloud_sdk=$root_dir/lib/google-cloud-sdk
+
 # The next line updates PATH for the Google Cloud SDK.
-if [ -f ./google-cloud-sdk/path.zsh.inc ]; then
-  source './google-cloud-sdk/path.zsh.inc'
+if [ -f "${gcloud_sdk}/path.zsh.inc" ]; then
+  source "${gcloud_sdk}/path.zsh.inc";
 fi
 
 # The next line enables shell command completion for gcloud.
-if [ -f ./google-cloud-sdk/completion.zsh.inc ]; then
-  source './google-cloud-sdk/completion.zsh.inc'
+if [ -f "${gcloud_sdk}/completion.zsh.inc" ]; then
+  source "${gcloud_sdk}/completion.zsh.inc";
 fi
