@@ -1,5 +1,8 @@
 [flake8]
-ignore = F403,F405
+# python 3.5
+# ignore = F403,F405
+# python 2.7
+ignore = F403,F405,F821
 max-complexity = 9
 exclude =
   .git,
@@ -16,4 +19,5 @@ exclude =
   tmp,
   dist
   *.egg-info,
-  *sdk,
+  vendor,
+  lib,
